--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "1. Fork this repo, clone the fork, and initialize a Node app in the folder. Add `node_modules` to `.gitignore`. Install `express` and `pg` to the folder.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/controller/server.js"
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
